# BertGCN-arda

./: .gitignore  README & to-do.md  README-mine.md  TO-DO.md  build_graph-arda.py  build_graph.py  build_graph_arda-2.py  build_graph_arda.py  build_graph_old.py  build_graph_v2.py  deneme.py  deneme2.py  deneme_ignite.py  finetune_bert-arda.py  finetune_bert.py  finetune_bert_v2.py  gcn_models.py  layers.py  main_bert.py  main_bert_documented.py  main_gcn.py  plotting-old.py  pyproject.toml  to-do.md  train_bert_gcn-arda.py  train_bert_gcn-sparse.py  train_bert_gcn.py  train_bertgcn.py  train_gcn.py  utils_train_v2.py  utils_v2.py
configs/: bert_finetune_config.json  config_file.json  config_train_bert_hete_gcn.json
model/: models.py  torch_gcn.py  trial.py
model_scripts/: __init__.py  gcn_types.py  layers.py  objective_funcs.py  trainers.py
redundant/: deneme2.py
results/: res.csv
to-remove/: fine-tune-deberta.py  plotting.py
utils/: utils.py  utils_train.py
utils_scripts/: __init__.py  utils_train_v2.py  utils_v2.py
