[tool.poetry]
name = "bertgcn-arda-new"
version = "0.1.0"
description = ""
authors = ["ArdaAras <ardaaras99@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.10"
transformers = "^4.18.0"
pip = "^20.3.3"
jupyter = "^1.0.0"
numpy = "^1.19.2"
scikit-learn = "^0.24.0"
nltk = "^3.4.5"
pytorch-ignite = "^0.4.9"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
ipykernel = "^6.13.0"
poethepoet = "^0.13.1"
pytest = "^7.1.2"

[tool.poe.tasks]
install-torch = "poetry run pip install torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cu113"
install-dgl = "poetry run pip install dgl-cu113 dglgo -f https://data.dgl.ai/wheels/repo.html"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"




