[tool.poetry]
name = "bertgcn-arda-new"
version = "0.1.0"
description = ""
authors = ["ArdaAras <ardaaras99@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
transformers = "^4.18.0"
jupyter = "^1.0.0"
numpy = "^1.19.2"
nltk = "^3.4.5"
scikit-learn = "^1.2.0"
torch = "^1.13.1"
optuna = "^3.0.5"
matplotlib = "^3.6.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
ipykernel = "^6.13.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"




